--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <hr size="3" noshade>
     <table>
         <tr>
-            <td><img src="Udemy course/default2.PNG" alt="insert picture here"></td>
+            <td><img src="default2.PNG" alt="insert picture here"></td>
             <td>
                 <table>
                     <tr>
