--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td><a href="C:\Users\RIDWAN\Documents\Projects\HTML\Contact me.html">Contact Me</a></td>
+                        <td><a href="contact me.html">Contact Me</a></td>
                     </tr>
                 </table>
             </td>
@@ -137,6 +137,6 @@
     </table>
     <hr size="4" noshade>
     <h3>Hobbies</h3>
-    <a href="C:\Users\RIDWAN\Documents\Projects\HTML\hobbies.html">Here's a list of my hobbies</a>
+    <a href="hobbies.html">Here's a list of my hobbies</a>
 </body>
 </html>
