--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <th>Tertiary</th>
                     </thead>
                     <tr>
-                        <td><a href="https://www.lcu.edu.ng">Lead City University :</a></td>
+                        <td><a href="https://www.lcu.edu.ng">Lead City University, Ibadan :</a></td>
                         <td>2023 - present</td>
                     </tr>
                     <tr>
